...
    <string name="WaitWhileSecretIsGenerated">Please wait while the secret is generated.</string>
    <string name="IncompatiblePushVersion">Incompatible Version</string>
    <string name="IncompatiblePushVersionMessage">The requested rollout version is higher than the supported one on this phone!</string>
    <string name="TokenExpiredTitle">Token expired!</string>
    <string name="TokenAddedToast">Token added:</string>
    <string name="ServerResponseNotOk">Server does not allow the rollout.</string>
    <string name="AuthenticationSuccessful">Authentication successful!</string>
    <string name="AuthenticationFailed">Authentication failed!</string>
    <string name="PushtokenLabel">Pushtoken</string>
    <string name="RolloutButton">Rollout</string>
    <string name="PushtokenLabelRolloutUnfinished">Pushtoken - Rollout unfinished</string>
    <string name="AboutTitle">About the App</string>
    <string name="apache_license_2_0Label" translatable="false">Apache License 2.0</string>
    <string name="SSLHandshakeFailed">SSL Handshake failed.</string>
    <string name="PushtokenRollingOut">Rolling out…</string>
...
